# SkyMind-

./: .gitignore  Makefile  README.md  SkyMind_Comprehensive_Documentation.md  docker-compose.yml  information.md  project_features.md  project_task_list.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 88afd7a82949_initial_schema_for_flights_airports_.py
backend/src/: main.py
backend/src/api/routes/: ml.py  websockets.py
backend/src/domain/models/: core.py
backend/src/infrastructure/: database.py
backend/src/jobs/: flight_ingestion.py  weather_ingestion.py
backend/src/services/advanced/: delay_xgb_model.py  demand_forecasting.py  explainability.py
backend/src/services/alerts/: manager.py
backend/src/services/data_processing/: cleaner.py  features.py
docs/architecture/adr/: 001-technology-stack.md  002-database-strategy.md
frontend/src/: index.css
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: ActiveFlights.tsx  GlobalMap.tsx  Overview.tsx
