[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skymind-backend"
version = "0.1.0"
description = "SkyMind AI Airline Operations Intelligence system backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.3",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
